Version 0.4-6
2017-10-27
   - Updates of various man pages.
   - New function sampleN2.TOST() to estimate n2 in 2x2 and parallel designs
     based on df=n-3 for stage 2.
   - df for sample size re-estimation changed to n-3 for Potvin like TSD schemes
     (pooled evaluation with additionally stage term)
   - Same for power.2Stage.ssr().
   - Function power.2stage.in() to calculate the operational characteristics of
     TSDs evaluated via p-value combination using the inverse normal approach.
     Contributed by Benjamin Lang.
   - GitHub URL and bug reports URL added
Version 0.4-5
2017-01-18
   - DOI for references in man pages added.
   - Bug in power.2stage.p() and power.2stage.pAF() removed which causes
     negative residual variances in case of test="anova" and imprecise power
     values in all other cases for certain scenarios of n1, CV.
   - Large sample approximation to the sample size adapted to deal with
     unsymmetric BE acceptance ranges, one limit = Inf allowed
   - Maintenance release to refelect changes in power calculation of
     package PowerTOST
   - Some small cosmetic changes in code w.r.t min.n2
Version 0.4-4
2016-01-21 (not released via CRAN)
   - Method "B0" (re)introduced in power.2stage() and power.2stage.fC() which
     employs the decision scheme of the so-called MSDBE (Modified Sequential
     Design for BE) of Zheng et al.
   - Method "B" in power.2stage.p() / power.2stage.pAF() also adapted to
     decision scheme E of Xu et al.
   - Figures with TSD decision schemes added in /doc subdirectory.
Version 0.4-3
2015-11-24
   - power2stage.fC() now has a new argument max.n which constraints the total
     sample size
   - Method "B" in power2stage.fC() and power.2stage() is redefined to deal
     with unequal alpha[1] and alpha[2] in the same manner as method "E" in
     Xu et al.This gives small differences compared to previous calculations
     with unequal alphas, f.i. Haybittle-Peto alphas